makes the header responsive with tailwind and colored

--- a/chat-room/src/page/homePage/header/header.scss
+++ b/chat-room/src/page/homePage/header/header.scss
@@ -1,3 +1,4 @@
-.headerHome {
-  width: 100%;
+h1 {
+  color: var(--red);
+  text-shadow: -1px 0 0 var(--pink), 1px 0 0 var(--pink), 0 -1px 0 var(--pink), 0 1px 0 var(--pink);
 }
