--- a/chat-room/src/page/homePage/header/header.scss
+++ b/chat-room/src/page/homePage/header/header.scss
@@ -1,4 +1,7 @@
-h1 {
-  color: var(--red);
-  text-shadow: -1px 0 0 var(--pink), 1px 0 0 var(--pink), 0 -1px 0 var(--pink), 0 1px 0 var(--pink);
+.headerHome {
+  border-color: var(--red);
+
+  h1 {
+    color: var(--pink);
+  }
 }
