--- a/chat-room/src/index.css
+++ b/chat-room/src/index.css
@@ -7,6 +7,7 @@
   --red: rgb(184, 46, 46);
   --pink: rgb(233, 145, 145);
   --lightRed: rgb(241, 54, 54);
+  --shadow: rgba(25, 25, 25, 0.5);
 }
 
 body {
