--- a/chat-room/src/index.css
+++ b/chat-room/src/index.css
@@ -5,7 +5,7 @@
   --white: rgb(250, 250, 250);
   --gray: rgb(75, 75, 75);
   --red: rgb(184, 46, 46);
-  --pink: rgb(233, 145, 145);
+  --pink: rgb(198, 125, 125);
   --lightRed: rgb(241, 54, 54);
   --shadow: rgba(25, 25, 25, 0.5);
 }
@@ -18,4 +18,8 @@ body {
   font-family: "Poppins", Arial, Helvetica, sans-serif;
   color: var(--white);
   box-sizing: border-box;
+}
+
+#root, body, html {
+  height: 100%;
 }
