finishing the design element of chat room

--- a/chat-room/src/page/roomChat/chatRoom/chatRoom.scss
+++ b/chat-room/src/page/roomChat/chatRoom/chatRoom.scss
@@ -5,3 +5,17 @@
 .roomChat {
   scrollbar-width: none;
 }
+
+.left-side-triangle {
+  width: 0;
+  height: 0;
+  border-bottom: calc(var(--spacing) * 5) solid transparent;
+  border-right: calc(var(--spacing) * 5) solid var(--pink);
+}
+
+.right-side-triangle {
+  width: 0;
+  height: 0;
+  border-bottom: calc(var(--spacing) * 5) solid transparent;
+  border-left: calc(var(--spacing) * 5) solid var(--red);
+}
