--- a/chat-room/src/index.css
+++ b/chat-room/src/index.css
@@ -6,6 +6,8 @@
   --gray: rgb(75, 75, 75);
   --red: rgb(184, 46, 46);
   --pink: rgb(198, 125, 125);
+  --darkRed: rgb(82, 22, 22);
+  --darkPink: rgb(128, 81, 81);
   --lightRed: rgb(241, 54, 54);
   --shadow: rgba(25, 25, 25, 0.5);
 }
